--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,26 @@
 * {
     box-sizing: border-box;
 }
+
+.grid-container {
+    border: 4px solid black;
+    padding: 5px;
+    width: 700px;
+    margin: 30px auto;
+
+}
+
+.grid-title, .grid-display-size {
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.grid-title {
+    margin-top: 40px;
+    margin-bottom: 5px;
+}
+
+.grid-display-size {
+    margin-top:  5px;
+    margin-bottom: 20px;
+}
