Disable user select/highlight

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
     padding: 5px;
     width: 700px;
     margin: 30px auto;
+    user-select: none;
 
 }
 
@@ -23,4 +24,12 @@
 .grid-display-size {
     margin-top:  5px;
     margin-bottom: 20px;
+}
+
+.grid-button {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+
 }
